# telegram-personal

./: .gitignore  README.md  SKILL.md  pyproject.toml
references/: api-notes.md
scripts/: setup.sh  tg.py
