[project]
name = "telegram-personal"
version = "0.1.0"
description = "Read-only CLI for personal Telegram account automation via MTProto"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.40",
    "cryptg>=0.4",
]

[project.scripts]
tg = "scripts.tg:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
